Change WEBTALK_HOST_NAME to WEBTALK_SERVER_NAME.

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -41,7 +41,7 @@ Vagrant.configure('2') do |config|
     chef.binary_env = 'WEBTALK_SOURCE_URL=' + ENV['WEBTALK_SOURCE_URL'] +
         ' WEBTALK_USER=' + USER +
         ' WEBTALK_LOGTALK_VERSION=' + ENV['WEBTALK_LOGTALK_VERSION'] +
-        ' WEBTALK_HOST_NAME=' + ENV['WEBTALK_HOST_NAME'] +
+        ' WEBTALK_SERVER_NAME=' + ENV['WEBTALK_SERVER_NAME'] +
         ' WEBTALK_ACME_CONTACT=' + ENV['WEBTALK_ACME_CONTACT']
   end
 
